--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.6",
     "bootstrap": "^5.3.3",
-    "jest-environment-jsdom": "^28.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -55,7 +55,7 @@
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^15.15.0",
-    "jest": "^27.5.1",
+    "jest": "^29.7.0",
     "jest-fixed-jsdom": "^0.0.9",
     "msw": "^2.7.0",
     "react-router-dom": "^6.29.0"
