--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.6",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^12.6.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
