--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-router-dom": "^6.30.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -59,7 +60,6 @@
     "globals": "^15.15.0",
     "jest": "^29.7.0",
     "jest-fixed-jsdom": "^0.0.9",
-    "msw": "^2.7.0",
-    "react-router-dom": "^6.29.0"
+    "msw": "^2.7.0"
   }
 }
